fix perfil: erro na alteração
